<resources>
    <string name="app_name">PcComponentes</string>
    <string name="user_hint">Usuario (email)</string>
    <string name="password_hint">Contraseña</string>
    <string name="forgotPassword_hint">¿Has olvidado tu contraseña?</string>
    <string name="passwordEdit_hint">Modificar contraseña</string>
    <string name="passwordConfirm_hint">Confirmar contraseña</string>
    <string name="signIn_text">Iniciar sesión</string>
    <string name="register_text">Registrarse</string>
    <string name="apply_text">Aplicar cambios</string>
    <string name="deleteAccount_hint">¿Desea borrar su cuenta?</string>
    <string name="redirectWeb">Abrir en navegador</string>

    <string name="notif_push_text">Notificaciones móviles</string>
    <string name="notif_email_text">Notificaciones por correo</string>

    <string name="op_perfil">Mi Perfil</string>
    <string name="op_sesion">Cerrar Sesión</string>
    <string name="op_buscador">Buscador</string>

    <string name="vistaPrincipal">Principal</string>
    <string name="vistaSeguidos">Seguidos</string>


</resources>
